# founder-outreach-bot

./: .env.example  .gitignore  README.md  auth_gmail.py  pyproject.toml  requirements.txt  run.py
docs/superpowers/plans/: 2026-06-16-founder-outreach-bot.md
docs/superpowers/specs/: 2026-06-16-founder-outreach-bot-design.md
kb/: angles.md  profile.md  proof.md  reviews.md
src/founder_bot/: bot.py  company.py  config.py  drafter.py  enrich.py  gmail_draft.py  kb.py  models.py  pipeline.py  urls.py
tests/: test_bot.py  test_company.py  test_config.py  test_drafter.py  test_enrich.py  test_gmail_draft.py  test_kb.py  test_models.py  test_pipeline.py  test_urls.py
